Ported some changes from 1.0-branch to trunk: * Added saveToDiskButton to ImageDataFieldEditor. * Added icons to all buttons of the ImageDataFieldEditor (and removed text).
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base.ui@16015 18c61ebf-f106-0410-9e1e-81fb82415b8f